Updates profile header menu to position absolute to ensure it behaves properly when scrolling with it visible.

--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -82,7 +82,7 @@
     vertical-align: middle;
 }
 #header .menu .menu-dropdown {
-    position: fixed;
+    position: absolute;
     display: none;
 
     min-width: 9em;
